--- a/light-locker-settings/light-locker-settings.glade
+++ b/light-locker-settings/light-locker-settings.glade
@@ -21,7 +21,7 @@
             <child>
               <object class="GtkEventBox" id="xfce_header">
                 <property name="name">xfce_header</property>
-                <property name="visible">True</property>
+                <property name="visible">False</property>
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkBox" id="box2">
